# Tech-Challenge-Fase1

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: deploy_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
notebooks/: 02_baselines.ipynb  Baselines.ipynb  EDA.ipynb  baselines.ipynb  mlp_pytorch.ipynb  model_comparison.csv  models_and_mlp.ipynb
scripts/: export_artifacts.py  open_mlflow_ui.py  train_model.py
src/: api.py  model.py  preprocessing.py
tests/: test_api.py  test_schema.py  test_smoke.py
