[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tech-challenge-churn"
version = "0.1.0"
description = "Predição de telco churn com MLP (PyTorch) e end-to-end pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "numpy>=1.26",
    "mlflow>=2.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "kagglehub>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "pandera>=0.18",
    "ruff>=0.4",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
